--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <body>
     <p id="message">文字変更箇所</p>
     <button id="changeText">Button</button>
+
+    <input type="text" id="newItem" placeholder="新しい項目を入力">
+    <button id="addButton">追加</button>
+    <ul id="itemList"></ul>
+    <button id="deleteButton">Delete</button>
+
+    <input type="checkbox" id="styleToggle">
+    <label for="styleToggle">太字にする</label>
+    <p id="styledText">このテキストのスタイルが変わります</p>
 </body>
 </html>
